SERVER-33456 Ensure `onShardVersionMismatch` does not throw